<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/fragment_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/fragment_news"
        android:icon="@drawable/ic_news"
        android:title="@string/nav_news" />
    <item
        android:id="@+id/fragment_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/fragment_more"
        android:icon="@drawable/ic_more"
        android:title="@string/nav_more" />
</menu>
