<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_admin"
    app:startDestination="@id/fragment_users">

    <fragment
        android:id="@+id/fragment_users"
        android:name="com.crossfitarmyjym.app.ui.admin.UsersFragment"
        android:label="Пользователи"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/fragment_schedule"
        android:name="com.crossfitarmyjym.app.ui.client.ScheduleFragment"
        android:label="@string/nav_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/fragment_news"
        android:name="com.crossfitarmyjym.app.ui.client.NewsFragment"
        android:label="@string/nav_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/fragment_news_detail"
        android:name="com.crossfitarmyjym.app.ui.client.NewsDetailFragment"
        android:label="@string/nav_news"
        tools:layout="@layout/fragment_news_detail" />

    <fragment
        android:id="@+id/fragment_statistics"
        android:name="com.crossfitarmyjym.app.ui.admin.StatisticsFragment"
        android:label="Статистика"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/fragment_content"
        android:name="com.crossfitarmyjym.app.ui.admin.ContentFragment"
        android:label="Контент"
        tools:layout="@layout/fragment_content">
        <action
            android:id="@+id/action_content_to_wod_editor"
            app:destination="@id/fragment_admin_wod_editor" />
    </fragment>

    <fragment
        android:id="@+id/fragment_admin_wod_editor"
        android:name="com.crossfitarmyjym.app.ui.trainer.WodEditorFragment"
        android:label="Создать WOD"
        tools:layout="@layout/fragment_wod_editor" />

    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.crossfitarmyjym.app.ui.client.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/fragment_more"
        android:name="com.crossfitarmyjym.app.ui.client.MoreFragment"
        android:label="@string/nav_more"
        tools:layout="@layout/fragment_client_placeholder" />

</navigation>
