<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="76dp"
    android:paddingTop="9dp"
    android:paddingBottom="9dp">

    <View
        android:id="@+id/accent"
        android:layout_width="4dp"
        android:layout_height="42dp"
        android:background="@color/army_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/army_navy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintStart_toEndOf="@id/accent"
        app:layout_constraintTop_toTopOf="@id/accent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/text_secondary"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintStart_toEndOf="@id/accent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        style="@style/Widget.CrossfitArmyJym.Button.Outlined"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/admin_edit"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:text="@string/admin_edit_symbol"
        android:textSize="17sp"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"
        style="@style/Widget.CrossfitArmyJym.Button.Outlined"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/admin_delete"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:text="@string/admin_delete_symbol"
        android:textSize="20sp"
        app:cornerRadius="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/accent" />
</androidx.constraintlayout.widget.ConstraintLayout>
